# 25_sum_design2

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/inbound/: InboundManager.cpp  InboundManager.h  Package.h  ShelfAllocator.cpp  ShelfAllocator.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/gui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/gui/widgets/: InboundWidget.cpp  InboundWidget.h  InboundWidget.ui
